[gd_scene load_steps=5 format=3 uid="uid://bw77fqlykqrna"]

[ext_resource type="Script" path="res://ui/authentication_menu/authentication_reset_menu.gd" id="1_m60ch"]
[ext_resource type="Theme" uid="uid://cb6ct0icqeuwi" path="res://theme/theme.tres" id="2_6vdja"]
[ext_resource type="PackedScene" uid="uid://bipo5gfiuf2jl" path="res://components/language_switcher/language_switcher.tscn" id="2_aexen"]
[ext_resource type="PackedScene" uid="uid://clx44ncalqpaq" path="res://components/mute_button/mute_button.tscn" id="3_xy0xv"]

[node name="AuthenticationResetMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m60ch")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.831373, 0.815686, 0.811765, 1)

[node name="LanguageSwitcher" parent="." instance=ExtResource("2_aexen")]
layout_mode = 1

[node name="MuteButton" parent="." instance=ExtResource("3_xy0xv")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 183.0
offset_top = 129.0
offset_right = 456.0
offset_bottom = 230.0
theme_override_constants/separation = 12

[node name="Email" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6vdja")
placeholder_text = "Email"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_right = 80

[node name="SendReset" type="Button" parent="VBoxContainer/MarginContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("2_6vdja")
text = "Send reset email"

[node name="ReportMessage" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_6vdja")
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="pressed" from="VBoxContainer/MarginContainer/SendReset" to="." method="_on_send_reset_button_pressed"]
